tests/error/struct_index.nx
struct Point {
    x: [string; 1],
    y: int
}

fun add(n1: int, n2: int): string =
    "n1 + 2"

fun main() = (
    var point = [Point {
        x = ["42"; 1],
        y = 24
    }; 1];
    if point.[0].x.[0] == add 1 2 then
        print("point.x = 42");
    var test: string = 1 & 2;
    var test: string = 1 | 2;
    var test: string = 1 * 2;
    var test: string = 1 > 2;
    var test: string = 1 + 2;
    var test: string = -2;
    if Point { x = ["42"; 1], y = 42 } == if true then "42" else "24" then
        print ""
)
